[package]
name = "hyper_serde"
version = "0.11.1"
edition = "2018"
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
description = "Serde support for Hyper types"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/hyper_serde"
documentation = "https://docs.rs/hyper_serde"
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "hyper", "cookie", "mime"]

[badges]
travis-ci = { repository = "servo/hyper_serde" }

[lib]
doctest = false

[dependencies]
cookie = {version = "0.11", default-features = false}
http = "0.1"
hyper = { version = "0.12" }
mime = "0.3"
serde = "1.0"
serde_bytes = "0.11"
time = "0.1"
headers = "0.2"

[dev-dependencies]
serde_test = "1.0"
time = "0.1"

