[package]
name = "hyper_serde"
version = "0.13.1"
edition = "2018"
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
description = "Serde support for hyper types."
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/hyper_serde"
documentation = "https://docs.rs/hyper_serde"
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "hyper", "cookie", "mime"]

[lib]
doctest = false

[dependencies]
cookie = { version = "0.16", default-features = false }
headers = "0.3"
http = "0.2"
hyper = "0.14"
mime = "0.3"
serde = "1.0"
serde_bytes = "0.11"
time = "0.1"

[dev-dependencies]
serde_test = "1.0"
